--- a/dotfile/config/vscode/custom.css
+++ b/dotfile/config/vscode/custom.css
@@ -35,10 +35,17 @@
 
 /* ------------ Tabs ------------ */
 /* .tabs-container > .tab {
-  border-radius: var(--border-radius);
+  border-radius: var(--border-radius);1
 }*/
 .tabs-container > .tab.active {
   border-bottom: 1px solid rgba(255, 255, 255, 1);
+}
+.dirty.dirty-border-top {
+  border-top: none !important;
+  border-bottom: 1px solid var(--tab-dirty-border-top-color);
+}
+.tab-border-top-container {
+  display: none !important;
 }
 
 /* ------------ Tooltips ------------ */
@@ -184,6 +191,10 @@
 }
 .monaco-editor .margin-view-overlays .current-line-exact-margin {
   border: none !important;
+}
+
+.monaco-inputbox {
+  border-radius: var(--border-radius-small) !important;
 }
 
 /* ------------ Find Widget ------------ */
