--- a/dotfile/config/vscode/custom.css
+++ b/dotfile/config/vscode/custom.css
@@ -34,9 +34,6 @@
 }
 
 /* ------------ Tabs ------------ */
-/* .tabs-container > .tab {
-  border-radius: var(--border-radius);1
-}*/
 .tabs-container > .tab.active {
   border-bottom: 1px solid rgba(255, 255, 255, 1);
 }
@@ -46,6 +43,18 @@
 }
 .tab-border-top-container {
   display: none !important;
+}
+
+.monaco-workbench
+  .part.editor
+  > .content:not(.dragged-over)
+  .editor-group-container.active
+  > .title
+  .tabs-container
+  > .tab.sizing-shrink:not(.dragged):not(.sticky-compact)
+  > .tab-label
+  > .monaco-icon-label-container::after {
+  display: none;
 }
 
 /* ------------ Tooltips ------------ */
@@ -197,7 +206,6 @@
   border-radius: var(--border-radius-small) !important;
 }
 
-/* ------------ Find Widget ------------ */
 .monaco-editor .find-widget {
   border: var(--border) !important;
   border-radius: var(--border-radius) !important;
